--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     body { 
       font-family: 'Segoe UI', 'Inter', 'Roboto', sans-serif; 
       padding: 20px; --focus-border: #3620b3 !important; --focus-shadow: rgba(80, 42, 168, 0.3) !important; }
+    #logo { 
+      width: 160px; 
+      margin: 0 auto 20px; 
+      display: block; }
     label { 
       display: block; 
       margin-top: 10px; }
@@ -14,16 +18,64 @@
       width: 100%; 
       padding: 10px; 
       margin-top: 5px; 
-      border: 1px solid #ccc; 
+      border: 0; 
       border-radius: 6px;
-      box-shadow: inset 0 1px 3px rgba(0,0,0,0.1); 
+      box-shadow: inset #abacaf 0 0 0 1px;
       font-size: 1em; 
-      transition: border 0.2s ease, box-shadow 0.2s ease;
+      transition: all .2s ease; 
       background-color: inherit; color: inherit; appearance: none; }
-    input:focus, select:focus { 
-      border-color: var(--focus-border); 
-      box-shadow: 0 0 0 2px var(--focus-shadow); 
-      outline: none; }
+    input:hover { 
+      box-shadow: 0 0 0 0 #fff inset, black 0 0 0 2px; }
+    input:focus { 
+      background: #fff;
+      outline: 0;
+      box-shadow: 0 0 0 0 #fff inset, black 0 0 0 3px; }            
+    select:hover { 
+      box-shadow: 0 0 0 0 #fff inset, black 0 0 0 2px; }
+    select:focus { 
+      background: #fff;
+      outline: 0;
+      box-shadow: 0 0 0 0 #fff inset, black 0 0 0 3px; }
+    .flex-row { 
+      display: flex; 
+      gap: 2em; 
+      margin-top: 1em; }
+    .flex-col { 
+      flex: 1; }
+    .flex-col input { 
+      width: -webkit-fill-available; }
+    select option:checked { 
+      background-color: black; 
+      color: #fbf1c7; }
+    select option:hover { 
+      background-color: black; 
+      color: #ffffff; }
+/*    #scrapeBtn {
+      display: inline-block;
+      outline: 0;
+      border: none;
+      box-shadow: none;
+      cursor: pointer;
+      padding: 9px 22px;
+      font-size: 22px;
+      height: 50px;
+      font-weight: 400;
+      color: #fff;
+      text-align: center;
+      line-height: normal;
+      background: linear-gradient(90deg,#5522fa 0,#0074e4 100%);
+      border-radius: 50px;
+      transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
+    #scrapeBtn:hover{
+          box-shadow: 0 0 0 0.15rem #5ceace;
+      }  */
+    #scrapeBtn:hover {
+      background-color: #d02813; 
+      color: white; 
+      border: none; 
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15); 
+      border-radius: 8px; 
+      transform: scale(1.05); }
     button { 
       color: black; 
       border: 1px solid #ccc; 
@@ -35,15 +87,9 @@
     button:hover { background-color: #f2f2f2; 
       box-shadow: 0 4px 8px rgba(0,0,0,0.15); 
       transform: scale(1.05); }
-    .flex-row { 
-      display: flex; 
-      gap: 2em; 
-      margin-top: 1em; }
-    .flex-col { 
-      flex: 1; }
     #status { 
       margin-top: 20px; 
-      color: #6da168; 
+      color: #328b2f; 
       white-space: pre-wrap; }
     footer { 
       margin-top: 30px; 
@@ -52,16 +98,6 @@
       text-align: center; }
     footer a { 
       color: #bbb; }
-    #logo { 
-      width: 160px; 
-      margin: 0 auto 20px; 
-      display: block; }
-    select option:checked { 
-      background-color: #d78546; 
-      color: #fbf1c7; }
-    select option:hover { 
-      background-color: #83a598; 
-      color: #ffffff; }
   </style>
   <style>
     body.dark-mode { 
@@ -130,7 +166,7 @@
       <button id="browseBtn">Browse</button>
       <button id="openScrapes">See Scrapes</button>
     </div>
-    <button id="scrapeBtn" style="background-color: #d02813; color: white; border: none; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-radius: 8px; transition: all 0.2s ease;">Scrape It</button>
+    <button id="scrapeBtn">Scrape It</button>
   </div>
 
   <div id="status"></div>
